<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showin="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_homesujoy"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_aboutsujoy"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_helpsujoy"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/help" />

    </group>

    <item android:title="@string/name4">
        <menu>
            <item
                android:id="@+id/nav_sharesujoy"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_callsujoy"
                android:icon="@drawable/ic_call_black_24dp"
                android:title="@string/call" />

        </menu>
    </item>

</menu>


