<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout
    android:padding="10dp"

    tools:context=".SmsSUjoy"
    android:orientation="vertical"

    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">



    <ScrollView


        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout

            android:background="#C2F505"

            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                android:textColor="#FFFFFF"
                android:background="#FD7600"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enternum6"
                />
            <TextView
                android:layout_marginBottom="10dp"
                android:textColor="#FF2222"
                android:background="#ff2"

                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enternum7"
                />
            <TextView
                android:textColor="#FFFFFF"
                android:background="#120918"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enternum8"
                android:layout_marginBottom="20dp"
                />

            <TextView
                android:textColor="#ffffff"
                android:background="#0C0C0C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enternum9"
                android:layout_marginBottom="10dp"
                />

            <EditText
                android:textColorHint="#000000"

                android:layout_gravity="center"

                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:hint="@string/enternum2"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/inputNumber"
                android:importantForAutofill="no"
                tools:targetApi="o" />

            <EditText
                android:textColorHint="#131313"

                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:hint="@string/enternum3"
                android:inputType="textCapSentences|textMultiLine"
                android:ems="10"
                android:id="@+id/inputMessage"
                android:layout_marginBottom="20dp"
                android:maxLines="5"
                android:maxLength="2000"
                android:importantForAutofill="no"
                tools:targetApi="o" />

            <Button
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/buttonSend"
                android:onClick="onSend"
                android:textColor="#ff2"
                android:textSize="15sp"
                android:textStyle="bold"
                android:background="@drawable/ripplebutton44"
                android:text="@string/enternum4"/>

            <TextView
                android:textStyle="bold"
                android:textColor="#FF0033"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enternum5"
                />


        </LinearLayout>


    </ScrollView>


</LinearLayout>