<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="5dp"
    tools:context=".MainActivity">

    <Button
        android:textColor="#FF4006"
        android:background="#FFFF00"
        android:id="@+id/button_choose_image"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/selectpic" />

    <EditText
        android:gravity="center"
        android:background="#C0460D"
        android:textColor="#FFFFFF"
        android:textColorHint="#ff2"
        android:id="@+id/edit_text_file_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/button_choose_image"
        android:hint="@string/aboutthenews"
        android:importantForAutofill="no" tools:targetApi="o"/>

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/progress_bar"
        android:layout_below="@id/edit_text_file_name"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/enterpass" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_upload"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp" />

    <Button
        android:textStyle="bold"
        android:textColor="#ffff"
        android:background="@drawable/ripplebutton44"
        android:id="@+id/button_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/up11" />

    <TextView
        android:id="@+id/text_view_show_uploads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_upload"
        android:layout_alignTop="@+id/button_upload"
        android:layout_marginStart="25dp"
        android:layout_toEndOf="@+id/button_upload"
        android:gravity="center"
        android:background="#ff2"
        android:textStyle="bold"
        android:textColor="#FF224E"
        android:text="@string/sup"
        android:textSize="16sp" />

</RelativeLayout>