<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"

    android:padding="30dp"
    android:gravity="center"

    android:layout_height="match_parent"
    tools:context=".GazitoKomlatime">


    <Button
        android:layout_marginBottom="15dp"

        android:id="@+id/gazitokomtime1"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#ffff"
        android:text="@string/aa1"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/homerip1"
        />


    <Button
        android:layout_marginBottom="15dp"

        android:id="@+id/gazitokomtime2"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#ffff"
        android:text="@string/aa2"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/homerip1"
        />


    <Button

        android:id="@+id/gazitokomtime3"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#ffff"
        android:text="@string/aa3"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/homerip1"
        />






</LinearLayout>