<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Navigation_Sujoy"
    tools:showIn="@layout/app_bar_navigation__sujoy">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >
            <Switch
                android:layout_marginBottom="15dp"
                android:layout_gravity="end"
                android:id="@+id/switchid3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:layout_marginBottom="20dp"
                android:drawableStart="@drawable/ic_arrow_forward_black_24dp"
                android:textColor="#FDFDFD"
                android:background="@drawable/homerip1"
                android:gravity="center"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/gazitodka"
                android:id="@+id/homebtn1"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                />
            <Button
                android:layout_marginBottom="20dp"
                android:drawableStart="@drawable/ic_arrow_forward_black_24dp"
                android:textColor="#FDFDFD"
                android:background="@drawable/homerip1"
                android:gravity="center"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/dkatogazi"
                android:id="@+id/homebtn2"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                />

            <Button

                android:layout_marginBottom="20dp"
                android:drawableStart="@drawable/ic_update_black_24dp"
                android:textColor="#FDFDFD"
                android:background="@drawable/homerip1"
                android:gravity="center"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/update"
                android:id="@+id/homebtn3"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                />

            <Button
                android:layout_marginBottom="20dp"
                android:drawableStart="@drawable/ic_sms_black_24dp"
                android:textColor="#FDFDFD"
                android:background="@drawable/homerip1"
                android:gravity="center"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/sms"
                android:id="@+id/homebtn4"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                />

            <Button
                android:layout_marginBottom="20dp"
                android:drawableStart="@drawable/facebook1"
                android:textColor="#FDFDFD"
                android:background="@drawable/homerip1"
                android:gravity="center"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/fb"
                android:id="@+id/homebtn5"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                />

            <Button
                android:id="@+id/homebtn6"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/ripplebutton44"
                android:drawableStart="@drawable/ic_cloud_upload_black_24dp"
                android:gravity="center"
                android:text="@string/up1"
                android:textColor="#FDFDFD"
                android:textSize="15sp"
                android:textStyle="bold" />




        </LinearLayout>
    </ScrollView>

</LinearLayout>